@@ -1,0 +1,32 @@
+<?php
+/***************************************************************************
+ *   Copyright (C) 2011 by Evgeniy N. Sokolov                              *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU Lesser General Public License as        *
+ *   published by the Free Software Foundation; either version 3 of the    *
+ *   License, or (at your option) any later version.                       *
+ *                                                                         *
+ ***************************************************************************/
+
+	final class MathUtilsTest extends TestCase
+	{
+		public function testCompareFloat()
+		{
+			$this->assertEquals(
+				MathUtils::compareFloat(0.001, 0.001),
+				0
+			);
+
+			$this->assertEquals(
+				MathUtils::compareFloat(0, 0.0001, 0.001),
+				0
+			);
+
+			$this->assertEquals(
+				MathUtils::compareFloat(0.0001, 0.00001, 0.000001),
+				1
+			);
+		}
+	}
+?>
